@@ -2,7 +2,9 @@ package soda_roja.backend.service;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import jakarta.persistence.EntityNotFoundException;
 import soda_roja.backend.dtoRequest.PersonaDTORequest;
+import soda_roja.backend.dtoResponse.DomicilioDTOResponse;
 import soda_roja.backend.dtoResponse.PersonaDTOResponse;
 import soda_roja.backend.model.Domicilio;
 import soda_roja.backend.model.Persona;
@@ -10,37 +12,36 @@ import soda_roja.backend.repository.DomicilioRepository;
 import soda_roja.backend.repository.PersonaRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-
 public class PersonaService {
 
     @Autowired
     private PersonaRepository repository;
+
     @Autowired
     private PagoService pagoService;
-    @Autowired
-    private DomicilioRepository DomicilioRepository;
 
+    @Autowired
+    private DomicilioRepository domicilioRepository;
 
     public List<PersonaDTOResponse> getAll() {
         return repository.findAll().stream().map(this::mapToDTO).toList();
     }
 
-   public PersonaDTOResponse getById(Long id) {
-        Persona persona = repository.findById(id).orElseThrow(() -> new RuntimeException("Persona no encontrado con id: " + id));
-        return mapToDTO(persona);
+    public PersonaDTOResponse getById(Long id) {
+        return repository.findById(id)
+                .map(this::mapToDTO)
+                .orElseThrow(() -> new EntityNotFoundException("Persona no encontrada con id: " + id));
     }
 
     public PersonaDTOResponse save(PersonaDTORequest entidad) {
-
-        List<Domicilio> Domicilios = entidad.getDomicilioId().stream()
-                .map(idpd -> DomicilioRepository.findById(idpd)
-                        .orElseThrow(() -> new RuntimeException("Domicilio no encontrada con id: " + idpd)))
+        List<Domicilio> domicilios = entidad.getDomicilioId().stream()
+                .map(this::findDomicilioOrThrow)
                 .toList();
+
         Persona persona = Persona.builder()
-                .Domicilios(Domicilios)
+                .Domicilios(domicilios)
                 .tipoDoc(entidad.getTipoDoc())
                 .nroDocumento(entidad.getNroDocumento())
                 .nombre(entidad.getNombre())
@@ -54,12 +55,13 @@ public class PersonaService {
     }
 
     public PersonaDTOResponse update(Long id, PersonaDTORequest entidad) {
-
-        Persona existing = repository.findById(id).orElseThrow(()-> new RuntimeException("Persona no encontrado con id: " + id));
-        List<Domicilio> Domicilios = entidad.getDomicilioId().stream()
-                .map(idpd -> DomicilioRepository.findById(idpd)
-                        .orElseThrow(() -> new RuntimeException("Domicilio no encontrada con id: " + idpd)))
+        List<Domicilio> domicilios = entidad.getDomicilioId().stream()
+                .map(this::findDomicilioOrThrow)
                 .toList();
+
+        Persona existing = repository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Persona no encontrada con id: " + id));
+
         existing.setTipoDoc(entidad.getTipoDoc());
         existing.setNroDocumento(entidad.getNroDocumento());
         existing.setNombre(entidad.getNombre());
@@ -67,14 +69,20 @@ public class PersonaService {
         existing.setEmail(entidad.getEmail());
         existing.setTelefono(entidad.getTelefono());
         existing.setDeuda(entidad.getDeuda());
-        existing.setDomicilios(Domicilios);
-
+        existing.setDomicilios(domicilios);
 
         return mapToDTO(repository.save(existing));
     }
 
     public void delete(Long id) {
-        repository.deleteById(id);
+        Persona persona = repository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Persona no encontrada con id: " + id));
+        repository.delete(persona);
+    }
+
+    private Domicilio findDomicilioOrThrow(Long id) {
+        return domicilioRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Domicilio no encontrado con id: " + id));
     }
 
     public PersonaDTOResponse mapToDTO(Persona persona) {
@@ -87,15 +95,16 @@ public class PersonaService {
                 .email(persona.getEmail())
                 .telefono(persona.getTelefono())
                 .deuda(persona.getDeuda())
-                .domicilios(persona.getDomicilios() != null ? persona.getDomicilios().stream().map(domicilio->
-                        new DomicilioService().mapToDTO(domicilio))
-                .collect(Collectors.toList()) : List.of())
-                .pagos(persona.getPagos() != null ? persona.getPagos().stream().map(pago ->
-                        new PagoService().mapToDTO(pago)
-                ).collect(Collectors.toList()) : List.of())
+                .domicilios(persona.getDomicilios() != null
+                        ? persona.getDomicilios().stream().map(this::mapDomicilioToDTO).toList()
+                        : List.of())
+                .pagos(persona.getPagos() != null
+                        ? persona.getPagos().stream().map(pagoService::mapToDTO).toList()
+                        : List.of())
                 .build();
     }
 
-
+    private DomicilioDTOResponse mapDomicilioToDTO(Domicilio domicilio) {
+        return new DomicilioService().mapToDTO(domicilio);
+    }
 }
-
